# comicbook-creator

./: .gitignore  .venv_env_diag.py  .venv_key_probe.py  README.md  pyproject.toml  tmp_openai_probe.py
backend/: EVALUATOR_ORCHESTRATOR_PROPOSAL.md  IMPLEMENTATION_ROADMAP.md  PATH_FIX_REPORT.md  README.md  api.py  api_test.py  api_test_pathfix.py  copy_backend_to_frontend.py  crewai_proposal.md  debug_character_tool.py  fix_missing_images.py  force_copy_images.py  improved_comic_exporter.py  pyproject.toml  regenerate_pdf.py  server.py  test_character_consistency.py  test_crew.py  test_crew_quick.py  test_enhanced_character_consistency.py  test_evaluator.py  test_image_tool_path.py  test_metadata_system.py  test_orchestrator_detailed.py  test_orchestrator_enhancements.py  test_orchestrator_workflow.py  test_panel_extraction.py  test_path_fix.py  test_pdf_generation.py  test_registry_integration.py  test_scene_generation.py  test_server_prompts.py  test_simple_connectivity.py  tmp_stream_client.py  tmp_test_panel_validation_call.py  verify_fix.py
backend/knowledge/: general context.txt
backend/output/: _test_topic_the_last_light_of_andromeda_premise_in.md  a_bird_in_a_tree.md  a_cat_chasing_a_laser_pointer.md  a_comic_on_a_running_hand_and_robot.md  a_comic_on_an_alien_that_will_attack_the_earth_but.md  a_comic_on_dwarfland.md  a_comic_on_little_princess_and_a_wolf.md  a_comic_on_the_life_on_earth_in_2500.md  a_little_mouse_and_a_golden_cheese.md  a_sea_whale_and_shark_in_the_ocean.md  a_young_pilot_enjoying_the_andromeda.md  ai_lost_in_space.md  birthdaycake.md  (+40 more)
(+80 files in other folders)
